<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>


    <string name="title_home">title_home</string>

    <string name="ble_not_supported">BLE is not supported</string>

    <string name="label_data">Data:</string>

    <string name="label_device">Device:</string>
    <string name="label_state">State:</string>

    <string name="label_device_address">Device address:</string>

    <string name="label_status">Status:</string>


    <string name="label_brightness">Brightness:</string>

    <string name="label_color">Color:</string>

    <string name="label_onoff">On/Off:</string>

    <string name="button_send">Send</string>


    <string name="label_RGBOrder">RGB Order:</string>
    <string name="label_macros">Macros:</string>



    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="title_devices">BTLE LED Controllers</string>

    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="error_no_supported_characteristics">Device has no supported characteristics</string>

    <string name="error_no_supported_devices">No supported devices found...</string>





    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


    <string name="hint_brightness">brightness</string>
    <string name="hint_red">red</string>
    <string name="hint_green">green</string>
    <string name="hint_blue">blue</string>


    <!-- CODE items -->
    <string name="CODE_0">CODE0</string>
    <string name="CODE_1">CODE2</string>
    <string name="CODE_2">CODE2</string>

    <string name="CODE_3">Brightness</string>

    <string name="CODE_7">CODE8</string>
    <string name="CODE_8">CODE7</string>

    <string name="CODE_4_R">RED</string>
    <string name="CODE_5_B">BLUE</string>
    <string name="CODE_6_G">GREEN</string>



    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="r">RED</string>
</resources>
